@startuml
title Chat and Graduate Retrieval Hexagonal View
rectangle "ChatController" as controller
rectangle "ChatApplicationService" as service
interface "AiServicePort" as aiport
interface "GraduateRouteHandler" as retrieval
interface "GraduateCatalogRouteHandler" as location
rectangle "AI adapters" as ai
rectangle "SQL retrieval adapters" as sql
controller --> service
service --> aiport
service --> retrieval
service --> location
aiport <|.. ai
retrieval <|.. sql
location <|.. sql
@enduml
